# AdventofCode

./: .gitignore  README.md  pyproject.toml  requirements.txt
2022/: Day10_YM.py  Day11_YM.py  Day12_YM.py  Day13_YM.py  Day14_YM.py  Day15_YM.py  Day16_YM.py  Day17_YM.py  Day18_YM.py  Day19_YM.py  Day1_YM.ipynb  Day20_YM.py  Day21_YM.py  Day22_YM.py  Day23_YM.py  Day25_YM.py  Day2_YM.ipynb  Day3_YM.ipynb  Day5_YM.ipynb  Day6_YM.ipynb  Day7_YM.ipynb  Day7_YM.py  Day8_YM.py  Day9_YM.py
2022/Day19 Models/: AOCD_DAY19_1.lp  AOCD_DAY19_10.lp  AOCD_DAY19_11.lp  AOCD_DAY19_12.lp  AOCD_DAY19_13.lp  AOCD_DAY19_14.lp  AOCD_DAY19_15.lp  AOCD_DAY19_16.lp  AOCD_DAY19_17.lp  AOCD_DAY19_18.lp  AOCD_DAY19_19.lp  AOCD_DAY19_1_Part2.lp  AOCD_DAY19_2.lp  AOCD_DAY19_20.lp  AOCD_DAY19_21.lp  AOCD_DAY19_22.lp  AOCD_DAY19_23.lp  AOCD_DAY19_24.lp  AOCD_DAY19_25.lp  AOCD_DAY19_26.lp  AOCD_DAY19_27.lp  AOCD_DAY19_28.lp  AOCD_DAY19_29.lp  AOCD_DAY19_2_Part2.lp  AOCD_DAY19_3.lp  AOCD_DAY19_30.lp  AOCD_DAY19_3_Part2.lp  AOCD_DAY19_4.lp  AOCD_DAY19_5.lp  AOCD_DAY19_6.lp  AOCD_DAY19_7.lp  AOCD_DAY19_8.lp  AOCD_DAY19_9.lp
2023/: Day10_YM.py  Day11_YM.py  Day12_YM.py  Day13_YM.py  Day14_YM.py  Day15_YM.py  Day16_YM.py  Day17_YM.py  Day18_YM.py  Day1_YM.py  Day2_YM.py  Day3_YM.py  Day4_YM.py  Day5_YM.py  Day6_YM.py  Day7_YM.py  Day8_YM.py  Day9_YM.py
2024/: Day1_YM.py  Day2_YM.py  Day3_YM.py  Day4_YM.py  Day5_YM.py
2025/: Day10_YM.py  Day1_YM.py  Day2_YM.py  Day3_YM.py  Day4_YM.py  Day5_YM.py  Day6_YM.py  Day7_YM.py  Day8_YM.py  Day9_YM.py
utils/: grid.py
