[project]
name = "adventofcode-ym"
version = "0.1.0"
description = "Yianni's solutions & helpers for https://adventofcode.com/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[[project.authors]]
name = "Yianni Mercer"
email = "hey@yiannimercer.com"

[tool.setuptools.packages.find]
include = ["utils*"]